# AttentionOS

./: README.md  index.html  robots.txt  sitemap.xml
assets/: family-portrait.html  family.html  og.html  sprites.html
cli/: attn.py
demo/: gbc.html  index.html  modern.html  pixel.html  terminal.html
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  report.rs
desktop/ui/: dashboard.html  index.html
docs/: AGENTS.md  MCP.md  METRICS.md  SCIENCE.md  TIERS.md
mcp/: attention_mcp.py
