[package]
name = "attentionos"
version = "0.1.0"
description = "AttentionOS desktop pet — local-first attention observability"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
dirs = "5"

[profile.release]
strip = true
lto = true
